trunk/Archive2/38/34a2b8a38aa317/output
main.cpp:1:55: error: stray ‘#’ in program
 yguguytytr65r7uohiuhuygugrfvhuirfiuhycgxhfhdfghfghfgdh#include <iostream>№#include <iostream>
                                                       ^
main.cpp:1:1: error: stray ‘\342’ in program
 yguguytytr65r7uohiuhuygugrfvhuirfiuhycgxhfhdfghfghfgdh#include <iostream>№#include <iostream>
 ^
main.cpp:1:1: error: stray ‘\204’ in program
main.cpp:1:1: error: stray ‘\226’ in program
main.cpp:1:77: error: stray ‘#’ in program
 yguguytytr65r7uohiuhuygugrfvhuirfiuhycgxhfhdfghfghfgdh#include <iostream>№#include <iostream>
                                                                             ^
main.cpp:25:2: error: stray ‘#’ in program
 }#include <iostream>
  ^
main.cpp:49:2: error: stray ‘#’ in program
 }#include <iostream>
  ^
main.cpp:1:1: error: ‘yguguytytr65r7uohiuhuygugrfvhuirfiuhycgxhfhdfghfghfgdh’ does not name a type
 yguguytytr65r7uohiuhuygugrfvhuirfiuhycgxhfhdfghfghfgdh#include <iostream>№#include <iostream>
 ^
In file included from main.cpp:2:0:
/usr/include/c++/4.8/exception:35:37: error: expected declaration before end of line
 #pragma GCC visibility push(default)
                                     ^
